--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,19 @@
 
 <body>
     <canvas id="glcanvas" tabindex='1'></canvas>
-    <!-- Minified and statically hosted version of https://github.com/not-fl3/macroquad/blob/master/js/mq_js_bundle.js -->
+    <!-- Minified and statically-hosted version of https://github.com/not-fl3/macroquad/blob/master/js/mq_js_bundle.js -->
     <script src="./mq_js_bundle.js"></script>
+    <!-- Minified and statically-hosted version of https://not-fl3.github.io/miniquad-samples/gl.js -->
+    <script src="./gl.js"></script>
+    <script>
+        const register_plugin = function (importObject) {
+            // Matches main.rs -> extern "C" { fn close_window(); }
+            importObject.env.close_window = function (js_object) {
+                alert("Not supported in web browsers; must close the tab manually.");
+            }
+        }
+        miniquad_add_plugin({register_plugin});
+    </script>
     <script>load("./tetris-clone-rust.wasm");</script>
 </body>
 
